fix radio checkmark alignment on IE 11

--- a/scss/components/form/_radio.scss
+++ b/scss/components/form/_radio.scss
@@ -53,6 +53,7 @@
     &:checked + label {
       &::before {
         position: absolute;
+        top: 0;
         left: 0;
         content: '';
         border-radius: 50%;
